# nyc-taxi-operational-friction

./: .coverage  .gitignore  README.md  pyproject.toml
configs/: base.yaml
notebooks/: 01_framing_and_data_audit.ipynb  01_framing_and_data_audit.py  02_external_context_review.ipynb  02_external_context_review.py  03_taxi_metric_design.ipynb.ipynb  03_taxi_metric_design.py  04_EDA.ipynb  04_EDA.py
notebooks/__marimo__/session/: 01_framing_and_data_audit.py.json
scripts/: rename_legacy_raw_files.py
src/nyc_mobility_friction/: __init__.py  config.py  paths.py
src/nyc_mobility_friction/extractors/: __init__.py  calendar.py  events.py  extractor.py  run_extract.py  taxi.py  utils.py  weather.py
src/nyc_mobility_friction/transformers/: __init__.py  calendar.py  events.py  run_transform.py  taxi.py  weather.py
tests/: test_extractor.py  test_run_transform.py  test_transformers_calendar.py  test_transformers_events.py  test_transformers_taxi.py  test_transformers_weather.py
