[build-system]
requires = ["hatchling>=1.27", "setuptools>=65"]   # ← added setuptools as safety net
build-backend = "hatchling.build"

[project]
name = "nyc-mobility-friction"
version = "0.1.0"
description = "Portfolio project using NYC taxi trips and NYC 311 requests to prioritize mobility interventions."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  { name = "Vinicius" }
]

dependencies = [
  "marimo",
  "pandas",
  "numpy",
  "pyarrow",
  "jupyterlab",
  "matplotlib",
  "seaborn",
  "plotly",
  "geopandas",
  "shapely",
  "folium",
  "scikit-learn",
  "statsmodels",
  "sqlalchemy",
  "requests"
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "pytest",
  "ruff",
  "pre-commit",
  "mypy",
  "jupyterlab"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-include = ["*.ipynb"]   # if you lint notebooks

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]   # you can tweak later

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src/nyc_mobility_friction --cov-report=term-missing"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_mobility_friction"]
